--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,9 @@
 .mainBackground {
   display: flex;
-  max-width: 1481px;
+  max-width: 100%;
   height: auto;
   top: 0;
+  left: 0;
   margin: auto;
+  position: absolute;
 }
