--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,22 +1,5 @@
-.boxForBackgroundImage {
-  position: relative;
-  .mainBackground {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-}
-
-.cardBox {
-  position: relative;
-}
-
-.user_header {
-  .line_dividing {
-    border: solid 1px #fff;
-    height: 10px;
-  }
+.container {
+  background-image: url('../components/icons/Rectangle1.png');
+  position: absolute;
+  width: 100%;
 }
