--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,10 +1,83 @@
 .box {
-  max-width: 1440px;
+  max-width: 1308px;
   margin: auto;
   display: flex;
   flex-direction: row;
   text-align: center;
+  .cardUserBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 20px 0px 20px;
+    background-color: #1a78c2;
+    max-width: 1308px;
+    background: linear-gradient(270deg, #1a78c2 0%, #1a78c2 101.06%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    height: 128px;
+    .userInfo {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .userGeneralPhoto {
+        width: 80px;
+        height: 80px;
+        margin: 0px 42px 0px 30px;
+      }
+      .changeText {
+        margin-top: 10px;
+      }
+      .changeImage {
+        color: #fff;
+        width: 27px;
+        height: 24px;
+        margin: 16px 28px 0px 6px;
+      }
+    }
+  }
   .cardBox {
     width: 100%;
+    .personalArea {
+      display: flex;
+      flex-direction: column;
+      text-align: start;
+      margin-top: 20px;
+      margin-left: 20px;
+      .personalProfile {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .changeText {
+    display: none;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .box .cardUserBox {
+    height: 71px;
+    margin: 10px;
+  }
+  .box .cardUserBox .userInfo .userGeneralPhoto {
+    width: 40px;
+    height: 40px;
+    margin: 0px 10px;
+  }
+  .userInfoText {
+    font-size: 14px;
+  }
+  .box .cardUserBox .userInfo .changeImage {
+    margin: 5px 13px 0px 6px;
+  }
+  .box .cardBox .personalArea .personalProfile {
+    font-size: 14px;
+    margin-bottom: 0px;
+  }
+  .box .cardBox .personalArea .personalProfileText {
+    font-size: 12px;
   }
 }
