--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,7 @@
 .container {
   display: block;
   background-repeat: no-repeat;
-  background-image: url(/static/media/Rectangle1.5c1e0cd3.png);
+  background-image: url(../components/icons/background.png);
   min-width: 320px;
   max-width: 1308px;
   margin: auto;
