--- a/src/scss/UserData.scss
+++ b/src/scss/UserData.scss
@@ -6,7 +6,7 @@
   border-radius: 10px;
   margin: 20px;
   height: 192px;
-  justify-content: space-around;
+  justify-content: space-evenly;
   .lineDiviningData {
     background-color: #cae7fe;
     height: 1px;
@@ -14,5 +14,35 @@
   .mail {
     display: flex;
     flex-direction: row;
+    .mailText {
+      font-weight: 400;
+    }
+    .mailPhoto {
+      margin: 0px 45px 0px 77px;
+      width: 30px;
+      height: 30px;
+    }
+    .phone {
+      margin: 0px 45px 0px 77px;
+      width: 27px;
+      height: 27px;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mailText {
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .userDataContainer .mail .mailPhoto {
+    margin: 0px 12px 0px 12px;
+    width: 20px;
+    height: 20px;
+  }
+  .userDataContainer .mail .phone {
+    margin: 0px 13px 0px 13px;
+    width: 18px;
+    height: 18px;
   }
 }
