--- a/src/scss/Form.scss
+++ b/src/scss/Form.scss
@@ -14,9 +14,19 @@
     margin: 13px 20px 0px 0px;
   }
 }
-.buttonComplite {
+.boxButtonComplate {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.buttonComplate {
   background: #01bda7;
   border-radius: 36px;
   border: 0px;
   padding: 15px 26px;
+  width: 212px;
+  height: 49px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
