--- a/src/scss/ConfirmWindow.scss
+++ b/src/scss/ConfirmWindow.scss
@@ -43,6 +43,9 @@
       color: #fff;
       border: 1px #01bda7;
       margin: 32px 0px 28px 0px;
+      &:focus {
+        outline: none;
+      }
     }
     .noSaveBtn {
       width: 202px;
@@ -52,6 +55,9 @@
       color: #00bfa5;
       box-sizing: border-box;
       border-radius: 41px;
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
