--- a/src/scss/Form.scss
+++ b/src/scss/Form.scss
@@ -29,4 +29,57 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  color: #fff;
+  font-weight: 600;
+  &:focus {
+    outline: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .formBox {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    .componentForm {
+      margin: 10px;
+    }
+    .line_divining3 {
+      display: none;
+    }
+  }
+  .userDataContainer {
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin: 20px;
+    height: 100%;
+    justify-content: space-evenly;
+  }
+  .boxButtonComplate {
+    margin-bottom: 15px;
+  }
+  .userInfoText {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .formBox {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    .imageMail {
+      display: none;
+    }
+    .componentForm {
+      margin: 10px;
+    }
+  }
 }
