--- a/src/scss/Form.scss
+++ b/src/scss/Form.scss
@@ -37,6 +37,10 @@
 }
 
 @media screen and (max-width: 900px) {
+  .userDataContainer .mail {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
   .formBox {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -57,7 +61,7 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     margin: 20px;
-    height: 100%;
+    height: inherit;
     justify-content: space-evenly;
   }
   .boxButtonComplate {
